k8s-manifests/jenkins-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
