k8s-manifests/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
spec:
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
