k8s-manifests/petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: petclinic-monolito:latest
        imagePullPolicy: Never  # Importante: Fuerza a usar la imagen local importada
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  type: NodePort  # Expone el puerto en la IP del nodo (tu VM)
  selector:
    app: petclinic
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080  # Puerto fijo para acceso externo
