k8s-manifests/vets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
      - name: vets-service
        image: docker.io/library/petclinic-monolito:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
spec:
  type: ClusterIP  # Solo accesible dentro del cluster (el Ingress lo expondrá)
  selector:
    app: vets-service
  ports:
  - port: 80
    targetPort: 8080
